@@ -1,7 +1,7 @@
 Package: pedometrics
 Title: Pedometric Tools and Techniques
-Version: 0.4-1
-Date: 2014-12-01
+Version: 0.4-2
+Date: 2014-12-08
 Authors@R: c(person("Alessandro Samuel-Rosa", role = c("aut", "cre"), email =
     "alessandrosamuelrosa@gmail.com"), person("Lucia Helena Cunha dos Anjos",
     role = "ths", email = "lanjos@ufrrj.br"), person("Gustavo de Mattos
@@ -15,12 +15,14 @@ Authors@R: c(person("Alessandro Samuel-Rosa", role = c("aut", "cre"), email =
     "ctb", email = "pablogr@unex.es"), person("Edzer Pebesma", role = "ctb",
     email = "edzer.pebesma@uni-muenster.de"), person("Jon Skoien", role =
     "ctb", email = "jon.skoien@gmail.com"), person("Joshua French", role =
-    "ctb", email = "joshua.french@ucdenver.edu"))
+    "ctb", email = "joshua.french@ucdenver.edu"), person("Ken Kleinman", role =
+    "ctb", email = "Ken_Kleinman@hms.harvard.edu"), person("Dick Brus", role =
+    "ctb", email = "dick.brus@wur.nl"))
 Author: Alessandro Samuel-Rosa [aut, cre], Lucia Helena Cunha dos Anjos [ths],
     Gustavo de Mattos Vasques [ths], Gerard B. M. Heuvelink [ths], Tony Olsen
     [ctb], Tom Kincaid [ctb], Juan Carlos Ruiz Cuetos [ctb], Maria Eugenia Polo
     Garcia [ctb], Pablo Garcia Rodriguez [ctb], Edzer Pebesma [ctb], Jon Skoien
-    [ctb], Joshua French [ctb]
+    [ctb], Joshua French [ctb], Ken Kleinman [ctb], Dick Brus [ctb]
 Maintainer: Alessandro Samuel-Rosa <alessandrosamuelrosa@gmail.com>
 Depends:
     R (>= 1.8.0)
