@@ -7,6 +7,7 @@ export(cdfPlot)
 export(cdfStats)
 export(cdfTable)
 export(coordenadas)
+export(cramer)
 export(gcpDiff)
 export(gcpVector)
 export(objMSSD)
